<resources>
    <string name="app_name">50fifty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>


    <string name="menu_get_a_ride">Get a Ride</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_ride_history">Ride History</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting">Setting</string>
</resources>
